chore: Building fixes